src/objects/Vehicle_Relationship__c.object
<CustomObject>
    <description>Contact Portfolio: Vehicle Relationship record linked to customer and a vehicle</description>
    <fields>
        <fullName>Add_Date__c</fullName>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_User__c</fullName>
        <label>Add User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Offer_Others__c</fullName>
        <label>Additional Offer Others</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Offer__c</fullName>
        <label>Additional Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 year free servicing</fullName>
                </value>
                <value>
                    <fullName>2 years free servicing</fullName>
                </value>
                <value>
                    <fullName>3 years free servicing</fullName>
                </value>
                <value>
                    <fullName>1 year extended warranty</fullName>
                </value>
                <value>
                    <fullName>2 years extended warranty</fullName>
                </value>
                <value>
                    <fullName>Fixed price service offer</fullName>
                </value>
                <value>
                    <fullName>Discount off parts and labour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Data_Sharing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The flag to identify if this record can be shared with MBJ</description>
        <label>Allow Data Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CP_Expiry_Date__c</fullName>
        <label>CP Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Expiry_KMS__c</fullName>
        <label>CP Expiry KMS</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Model__c</fullName>
        <formula>Vehicle_ID__r.Car_Model__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Car Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Relation__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Person&apos;s relationship to the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_CarRelation“</description>
        <inlineHelpText>Person&apos;s relationship to the vehicle</inlineHelpText>
        <label>Car Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchaser</fullName>
                </value>
                <value>
                    <fullName>Sales Contact Target</fullName>
                </value>
                <value>
                    <fullName>Aftersales Contact Target 1</fullName>
                </value>
                <value>
                    <fullName>Aftersales Contact Target 2</fullName>
                </value>
                <value>
                    <fullName>Self-registered</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Aftersales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_No__c</fullName>
        <label>Card No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Summary__c</fullName>
        <label>Class Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>C-Class</fullName>
                </value>
                <value>
                    <fullName>CL-Class</fullName>
                </value>
                <value>
                    <fullName>CLK-Class</fullName>
                </value>
                <value>
                    <fullName>E-Class</fullName>
                </value>
                <value>
                    <fullName>M-Class</fullName>
                </value>
                <value>
                    <fullName>S-Class</fullName>
                </value>
                <value>
                    <fullName>SL-Class</fullName>
                </value>
                <value>
                    <fullName>SLK-Class</fullName>
                </value>
                <value>
                    <fullName>CLS-Class</fullName>
                </value>
                <value>
                    <fullName>Viano</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>GL-Class</fullName>
                </value>
                <value>
                    <fullName>R-Class</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>CLC-Class</fullName>
                </value>
                <value>
                    <fullName>smart Fortwo coupe</fullName>
                </value>
                <value>
                    <fullName>smart Fortwo cabrio</fullName>
                </value>
                <value>
                    <fullName>smart Forfour</fullName>
                </value>
                <value>
                    <fullName>smart Roadster</fullName>
                </value>
                <value>
                    <fullName>SLS-Class</fullName>
                </value>
                <value>
                    <fullName>G-Class</fullName>
                </value>
                <value>
                    <fullName>SLS AMG</fullName>
                </value>
                <value>
                    <fullName>Sprinter</fullName>
                </value>
                <value>
                    <fullName>Vito</fullName>
                </value>
                <value>
                    <fullName>MB 100</fullName>
                </value>
                <value>
                    <fullName>MB 140</fullName>
                </value>
                <value>
                    <fullName>C-Class Coupe</fullName>
                </value>
                <value>
                    <fullName>All New A-Class</fullName>
                </value>
                <value>
                    <fullName>Valente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>End Reason Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Considered_Make_1__c</fullName>
        <label>Considered Make 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>ALFA ROMEO</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>ASTON MARTIN</fullName>
                </value>
                <value>
                    <fullName>AUDI</fullName>
                </value>
                <value>
                    <fullName>AUSTRAL DENNING</fullName>
                </value>
                <value>
                    <fullName>BENTLEY</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>CATERHAM</fullName>
                </value>
                <value>
                    <fullName>CATERPILLAR</fullName>
                </value>
                <value>
                    <fullName>CHERY</fullName>
                </value>
                <value>
                    <fullName>CHRYSLER</fullName>
                </value>
                <value>
                    <fullName>CITROEN</fullName>
                </value>
                <value>
                    <fullName>DAEWOO</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DAIHATSU</fullName>
                </value>
                <value>
                    <fullName>Datsun</fullName>
                </value>
                <value>
                    <fullName>DENNIS EAGLE</fullName>
                </value>
                <value>
                    <fullName>DODGE</fullName>
                </value>
                <value>
                    <fullName>Eunos</fullName>
                </value>
                <value>
                    <fullName>FERRARI</fullName>
                </value>
                <value>
                    <fullName>FIAT</fullName>
                </value>
                <value>
                    <fullName>FORD</fullName>
                </value>
                <value>
                    <fullName>FOTON</fullName>
                </value>
                <value>
                    <fullName>FREIGHTLINER</fullName>
                </value>
                <value>
                    <fullName>GMC</fullName>
                </value>
                <value>
                    <fullName>GREAT WALL</fullName>
                </value>
                <value>
                    <fullName>HINO</fullName>
                </value>
                <value>
                    <fullName>HOLDEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Considered_Make_2__c</fullName>
        <label>Considered Make 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>ALFA ROMEO</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>ASTON MARTIN</fullName>
                </value>
                <value>
                    <fullName>AUDI</fullName>
                </value>
                <value>
                    <fullName>AUSTRAL DENNING</fullName>
                </value>
                <value>
                    <fullName>BENTLEY</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>CATERHAM</fullName>
                </value>
                <value>
                    <fullName>CATERPILLAR</fullName>
                </value>
                <value>
                    <fullName>CHERY</fullName>
                </value>
                <value>
                    <fullName>CHRYSLER</fullName>
                </value>
                <value>
                    <fullName>CITROEN</fullName>
                </value>
                <value>
                    <fullName>DAEWOO</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>DAIHATSU</fullName>
                </value>
                <value>
                    <fullName>Datsun</fullName>
                </value>
                <value>
                    <fullName>DENNIS EAGLE</fullName>
                </value>
                <value>
                    <fullName>DODGE</fullName>
                </value>
                <value>
                    <fullName>Eunos</fullName>
                </value>
                <value>
                    <fullName>FERRARI</fullName>
                </value>
                <value>
                    <fullName>FIAT</fullName>
                </value>
                <value>
                    <fullName>FORD</fullName>
                </value>
                <value>
                    <fullName>FOTON</fullName>
                </value>
                <value>
                    <fullName>FREIGHTLINER</fullName>
                </value>
                <value>
                    <fullName>GMC</fullName>
                </value>
                <value>
                    <fullName>GREAT WALL</fullName>
                </value>
                <value>
                    <fullName>HINO</fullName>
                </value>
                <value>
                    <fullName>HOLDEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Considered_Model_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Considered Model 1</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Vehicle Relationship</relationshipLabel>
        <relationshipName>Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Considered_Model_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Considered Model 2</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Vehicle Relationship (Considered Model 2)</relationshipLabel>
        <relationshipName>Vehicle_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship 
Function: ID of related person 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_Contact“</description>
        <inlineHelpText>ID of related person</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the proper account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Company, PersonAccount, Person_Account_Manual_Merge, Person_Account_Soft_Deleted</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationships</relationshipLabel>
        <relationshipName>Vehicle_Relationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationship (Contractor)</relationshipLabel>
        <relationshipName>Vehicle_Relationship3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Welcome_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SSI Process:  Used to indicate that a Welcome Call task should be created.   A Salesforce trigger will detect when this checkbox is enabled by EP and generate the associated Welcome Call.</description>
        <label>Create Welcome Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Democar flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Car</fullName>
                </value>
                <value>
                    <fullName>Alternative Car</fullName>
                </value>
                <value>
                    <fullName>Daimler Employee Rental Car</fullName>
                </value>
                <value>
                    <fullName>Dealer Company Car</fullName>
                </value>
                <value>
                    <fullName>Dealer Employee Car</fullName>
                </value>
                <value>
                    <fullName>Dealer Employee Lease</fullName>
                </value>
                <value>
                    <fullName>Company Car</fullName>
                </value>
                <value>
                    <fullName>Daimler Employee Car</fullName>
                </value>
                <value>
                    <fullName>Daimler Employee Lease</fullName>
                </value>
                <value>
                    <fullName>Fuso Company Car</fullName>
                </value>
                <value>
                    <fullName>Fuso Employee Car</fullName>
                </value>
                <value>
                    <fullName>Fuso Employee Lease</fullName>
                </value>
                <value>
                    <fullName>Gift Car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerNo__c</fullName>
        <formula>Owner_Dealer__r.SF_Dealer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <label>Design</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Driver_Relationship__c</fullName>
        <label>Driver Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Collector</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Relationship end date
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_EndDate“</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Reason__c</fullName>
        <label>End_Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Bought Competitors</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Handover</fullName>
                </value>
                <value>
                    <fullName>Warranty system</fullName>
                </value>
                <value>
                    <fullName>MB Online</fullName>
                </value>
                <value>
                    <fullName>DMS</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Updated EndDate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Setting_DateTime__c</fullName>
        <label>End Setting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Setting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Setting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Vehicle_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Euro_Vin__c</fullName>
        <label>EuroVin</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationship (Finance Dealer)</relationshipLabel>
        <relationshipName>Vehicle_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Method__c</fullName>
        <label>Finance Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Residual Loan</fullName>
                </value>
                <value>
                    <fullName>Loan through MBF</fullName>
                </value>
                <value>
                    <fullName>Residual loan through MBF</fullName>
                </value>
                <value>
                    <fullName>Loan through Dealer</fullName>
                </value>
                <value>
                    <fullName>Residual loan through Dealer</fullName>
                </value>
                <value>
                    <fullName>Loan Arranged Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Leased Through MBF</fullName>
                </value>
                <value>
                    <fullName>Leased Through Dealer</fullName>
                </value>
                <value>
                    <fullName>Leased Arranged Elsewhere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <label>Financier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Category__c</fullName>
        <label>Fleet Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business - Local</fullName>
                </value>
                <value>
                    <fullName>Demonstrator</fullName>
                </value>
                <value>
                    <fullName>Demonstrator - Dealer</fullName>
                </value>
                <value>
                    <fullName>Demonstrator - MBAuP</fullName>
                </value>
                <value>
                    <fullName>Diplomats</fullName>
                </value>
                <value>
                    <fullName>Govt Federal</fullName>
                </value>
                <value>
                    <fullName>Govt Local</fullName>
                </value>
                <value>
                    <fullName>Mining company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overseas Delivery</fullName>
                </value>
                <value>
                    <fullName>Owner Operator</fullName>
                </value>
                <value>
                    <fullName>Primary Producer</fullName>
                </value>
                <value>
                    <fullName>Private Local - F</fullName>
                </value>
                <value>
                    <fullName>Private Local - M</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Taxis</fullName>
                </value>
                <value>
                    <fullName>Govt State</fullName>
                </value>
                <value>
                    <fullName>Not For Profit Org</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Large Fleet</fullName>
                </value>
                <value>
                    <fullName>Fleet Buyer</fullName>
                </value>
                <value>
                    <fullName>Medium / Small Fleet</fullName>
                </value>
                <value>
                    <fullName>Company Cars</fullName>
                </value>
                <value>
                    <fullName>MBC Employee</fullName>
                </value>
                <value>
                    <fullName>Retail Customer</fullName>
                </value>
                <value>
                    <fullName>Sprinter Body Builder</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fleet_End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet End Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationship (Fleet End Customer)</relationshipLabel>
        <relationshipName>Vehicle_Relationship2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Renewal_Date__c</fullName>
        <label>Insurance Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurer__c</fullName>
        <label>Insurer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_User_Type__c</fullName>
        <formula>Text(LastModifiedBy.User_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Service_Date__c</fullName>
        <label>Last Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Service_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Name of last service dealer
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_LastServiceDealer“</description>
        <inlineHelpText>Name of last service dealer</inlineHelpText>
        <label>Last Service Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select the proper dealer account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <infoMessage>Search and select the Dealer.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationships(Vehicle Relationship Last Service Dealer)</relationshipLabel>
        <relationshipName>Vehicle_Relationship_Last_Service_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Update_Changed_By__c</fullName>
        <label>Last Update Changed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Luxury__c</fullName>
        <label>Luxury</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;),&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;),&apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;),&apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;),&apos;TH&apos;,
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;),&apos;KR&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Car_Engine_Katashiki__c</fullName>
        <label>MOT Car Engine Katashiki</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Car_Katashiki__c</fullName>
        <label>MOT Car Katashiki</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Car_Name__c</fullName>
        <label>MOT Car Name</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Car_Type__c</fullName>
        <label>MOT Car Type</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Expired_Date__c</fullName>
        <label>MOT Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MOT_Owner_Address__c</fullName>
        <label>MOT Owner Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Owner_Name__c</fullName>
        <label>MOT Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_Place__c</fullName>
        <label>MOT Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOT_USER_NAME__c</fullName>
        <label>MOT User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>